<resources>
    <string name="app_name">GitNotify</string>
    <string name="activity_login">Login</string>
    <string name="activity_detail">Detail</string>
    <string name="login_placeholder">Username</string>
    <string name="password_placeholder">Password</string>
    <string name="login_btn">Login</string>
    <string name="detail_menu">loading</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="image_transition" translatable="false">image_transition</string>
    <string name="profile_image_format" translatable="false">%1$sv=3&amp;s=60</string>

    <string name="login_des">Enter your GitHub account informations</string>
    <string name="login_menu">logout</string>
    <string name="login_username_empty">Username should not be empty</string>
    <string name="login_password_empty">Password should not be empty</string>
    <string name="login_invalid">Invalid login</string>

    <string name="sync_menu">sync</string>
    <string name="sync_account_type">gitnotify.relferreira.com</string>
    <string name="content_authority">com.relferreira.gitnotify</string>
    <string name="sync_account_username">username</string>
    <string name="sync_error">Error syncing with the server!</string>
    <string name="api_request_error">Error requesting data!</string>
    <string name="sync_retry">Retry</string>

    <string name="main_tab_me">FEED</string>
    <string name="action_pull_request">%1$s %2$s pull request %3$s#%4$d</string>
    <string name="action_push">%1$s pushed to %2$s at %3$s</string>
    <string name="action_push_multiple_commits">%1$d commits</string>
    <string name="action_commented_on_issue">%1$s commented on issue %2$s#%3$d</string>
    <string name="action_commented_on_pull_request">%1$s commented on pull request %2$s#%3$d</string>
    <string name="action_commented_on_commit">%1$s commented on commit %2$s</string>
    <string name="action_closed">closed</string>
    <string name="action_merged">merged</string>
    <string name="action_create_event">%1$s created %2$s %3$s at %4$s</string>
    <string name="action_create_repository">%1$s created repository %2$s</string>
    <string name="action_deleted_event">%1$s deleted %2$s %3$s at %4$s</string>
    <string name="action_starred">%1$s starred %2$s</string>
    <string name="action_fork">%1$s forked %2$s to %3$s</string>
    <string name="action_wiki">%1$s %2$s the %3$s wiki</string>
    <string name="action_wiki_subtitle">%1$s %2$s</string>
    <string name="action_wiki_subtitle_multiple">%1$s %2$d pages</string>
    <string name="action_issue">%1$s %2$s issue %3$s#%4$d</string>
    <string name="action_member">%1$s %2$s to %3$s</string>
    <string name="action_member_by">By %1$s</string>
    <string name="action_member_detail" translatable="false">%1$s %2$s</string>
    <string name="action_public">%1$s was open sourced</string>
    <string name="action_pull_request_review">%1$s reviewed pull request %2$s#%3$d</string>
    <string name="action_release">Version %1$s of %2$s released</string>
    <string name="action_a11y_image">%s profile image</string>
    <string name="a11y_image">profile image</string>

    <string name="pull_request_title">Pull Request</string>
    <string name="pull_request_commits">%d commits</string>
    <string name="pull_request_additions">%d additions</string>
    <string name="pull_request_deletions">%d deletions</string>

    <string name="issues_title">Issues</string>

    <string name="push_title">Push</string>

    <string name="create_title">Create</string>
    <string name="delete_title">Delete</string>

    <string name="release_title">Release</string>
    <string name="release_pre">Pre-Release</string>

    <string name="member_title">Member</string>

    <string name="starred_title">Starred</string>

    <string name="fork_title">Fork</string>

    <string name="public_title">Open Sourced</string>

    <string name="pull_request_review_title">Pull request review</string>

    <string name="commit_comment_title">Commit comments</string>

    <string name="widget_title">Latest events</string>
    <string name="widget_header_subtitle">latest events</string>
    <string name="widget_empy_list">No events</string>

    <string name="analytics_main_screen" translatable="false">MainScreen</string>
    <string name="analytics_detail_screen" translatable="false">DetailScreen</string>
</resources>
